# Notepad_CPP

./: .gitignore  CMakeLists.txt  NotDefteri_CPP.sln  README.md
NotDefteri_CPP/: ASD_1745252863.cppndat  ASd_1745253482.cppndat  AppFunctions.cpp  AppFunctions.h  Ata_1745253470.cppndat  Merhaba-Dnya_1745251679.cppndat  New-Note_1745252004.cppndat  New-Note_1745252345.cppndat  NewNote_1745252141.cppndat  NotDefteri_CPP.cpp  NotDefteri_CPP.vcxproj  NotDefteri_CPP.vcxproj.filters  Note-self_1745256160.cppndat  Note.h  NoteStruct.cpp  NoteStruct.h  PORNOOO_1745252705.cppndat  SUAN_1745253635.cppndat  TESTER_1745253223.cppndat  Test-note_1745253055.cppndat  Title_1745255845.cppndat  a_1745252627.cppndat  a_1745253602.cppndat  a_1745253623.cppndat  g_1745252593.cppndat  newnote_1745252202.cppndat
